src/test/ui/let-else/issue-89960.stderr
error: unused variable: `meow`
  --> $DIR/issue-89960.rs:7:22
   |
LL |     let Some(ref mut meow) = Some(()) else { return };
   |                      ^^^^ help: if this is intentional, prefix it with an underscore: `_meow`
   |
note: the lint level is defined here
  --> $DIR/issue-89960.rs:4:9
   |
LL | #![deny(unused_variables)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

